--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "framer-motion": "^7.6.4",
-    "next": "13.0.1",
+    "framer-motion": "^7.10.3",
+    "next": "^13.4.4",
     "next-sanity": "^1.0.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.3",
     "react-simple-typewriter": "^4.0.5",
@@ -30,6 +30,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.3.2"
   }
 }
